<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchApp"
        android:title="@string/app_name"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView"
        />

    <item
        android:id="@+id/showSystem"
        android:title="@string/menu_show_system"
        android:icon="@android:drawable/ic_dialog_map"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/showDisabled"
        android:title="@string/menu_show_disabled"
        android:icon="@android:drawable/ic_dialog_alert"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/aboutMe"
        android:title="@string/about_me"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never" />

</menu>