<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:layout_marginBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/code_size_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/code_size_name"
            android:text="@string/app_code_size"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/code_size_phone"
            tools:text="Phone: 99MB"
            android:layout_width="130dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/code_size_sdcard"
            tools:text="SDCard: 99MB"
            android:layout_width="130dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/data_size_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/data_size_name"
            android:text="@string/app_data_size"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/data_size_phone"
            tools:text="Phone: 99MB"
            android:layout_width="130dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/data_size_sdcard"
            tools:text="SDCard: 99MB"
            android:layout_width="130dp"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/cache_size_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cache_size_name"
            android:text="@string/app_cache_size"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/cache_size_phone"
            tools:text="Phone: 99MB"
            android:layout_width="130dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/cache_size_sdcard"
            tools:text="SDCard: 99MB"
            android:layout_width="130dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/obb_size_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/obb_size_name"
            android:text="@string/app_obb_size"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/obb_size_phone"
            tools:text="Phone: 99MB"
            android:layout_width="130dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/obb_size_sdcard"
            tools:text="SDCard: 99MB"
            android:layout_width="130dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>